--- a/index.html
+++ b/index.html
@@ -1,13 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Portfolio</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f9;
+            color: #333;
+        }
+
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 15px 30px;
+            background-color: #0078D7;
+            color: white;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        header img {
+            height: 50px;
+        }
+
+        nav ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+        }
+
+        nav ul li {
+            margin: 0 15px;
+        }
+
+        nav ul li a {
+            text-decoration: none;
+            color: white;
+            font-weight: bold;
+            transition: color 0.3s, background-color 0.3s;
+            padding: 10px 15px;
+            border-radius: 5px;
+        }
+
+        nav ul li a:hover {
+            color: #0078D7;
+            background-color: #ffcc00;
+        }
+
+        .hero {
+            text-align: center;
+            padding: 60px 20px;
+            background: linear-gradient(to right, #0078D7, #00aaff);
+            color: white;
+        }
+
+        .hero h1 {
+            font-size: 2.5rem;
+            margin-bottom: 10px;
+        }
+
+        .hero p {
+            font-size: 1.2rem;
+        }
+
+        .container {
+            max-width: 1000px;
+            margin: 20px auto;
+            padding: 20px;
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .profile-photo {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .profile-photo img {
+            border-radius: 50%;
+            width: 150px;
+            height: 150px;
+            border: 4px solid #0078D7;
+        }
+
+        .about {
+            text-align: center;
+        }
+
+        .about h2 {
+            font-size: 1.5rem;
+            color: #0078D7;
+            margin-bottom: 15px;
+        }
+
+        .about p {
+            font-size: 1rem;
+            color: #555;
+            line-height: 1.6;
+        }
+
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #0078D7;
+            color: white;
+            margin-top: 20px;
+        }
+
+        footer a {
+            color: #ffcc00;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-    <h1> nan tha da leo
+    <header>
+        <img src="LOGO.jpg" alt="My Portfolio">
+        <nav>
+            <ul>
+                             <li><a href="index.html">Home</a></li>    
+                <li><a href="education.html">Education</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    </h1>
+    <section class="hero">
+        <h1>Welcome to My Portfolio</h1>
+        <p>Explore my journey, skills, and projects.</p>
+    </section>
+
+    <section id="about" class="container">
+        <div class="profile-photo">
+            <img src="gokul.jpg" alt="Profile Photo">
+        </div>
+        <div class="about">
+            <h2>Gokulprasath D</h2>
+            <p>I am Gokulprasath D, a second-year IT student at Kongu Engineering College. I am passionate about web technology and eager to apply my knowledge to impactful projects and collaborations.</p>
+        </div>
+    </section>
+
+
 </body>
 </html>
